--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="port.css">
-        <link rel="stylesheet" href="app.css">
-        <title>Grazy Fotos</title>
+        <title>Grazie Fotos</title>
 </head>
 
 <body>
